--- a/tasks/package.json
+++ b/tasks/package.json
@@ -10,9 +10,11 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
+    "lucide-vue-next": "^0.468.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "vue": "^3.2.13",
+    "vue-multiselect": "^3.1.0",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.2",
     "vuex-persistedstate": "^4.1.0"
